# bundlechecker

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.test.mjs
examples/: package.json  test.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: package.json  test.mjs
src/: analyze.rs  config.rs  files.rs  lib.rs  reporter.rs
