[package]
edition = "2021"
name = "bundlechecker"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2.1"
globwalk = "0.8.1"
is-glob = "0.1.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
walkdir = "2.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
